--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
+/* App.css */
 .App {
   text-align: center;
+  padding: 20px;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.logo {
+  width: 50px; 
+  height: auto;
+  cursor: pointer;
+ 
+}
+
+.header-image {
+  width: fit-content;
+  
+  justify-content: center; 
+  margin-top: 20px; 
+}
+
+.gallery-title {
+  flex-grow: 1; 
+}
+
+
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .logo {
+    margin-bottom: 10px;
+  }
+
+  
+}
+
+.image-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 20px;
+}
+
+.image-item {
+  margin: 0px;
+}
+
+.load-more-btn {
+  background-color: #8a8d8a; 
+  border: none;
   color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.load-more-btn:hover {
+  background-color: #45a049; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  width: 100%;
+  height: auto;
 }
